[package]
name = "diagtool"
version = "0.1.0"
edition = "2021"

[dependencies]
bpaf = { version = "0.9", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["net"] }
serde_yaml = "0.9.34"
serde = { version = "1.0", features = ["derive"]}
doip_rw = { git = "https://github.com/rjarzmik/doip_rw.git", branch = "main" }
doip_rw_tokio = { git = "https://github.com/rjarzmik/doip_rw_tokio.git", branch = "main" }
uds_rw = { git = "https://github.com/rjarzmik/uds_rw.git", branch = "main" }
env_logger = "0.11.5"
log = "0.4.22"
evalexpr = "12.0.2"
pretty-hex = "0.4.1"

[dev-dependencies]
regex = "1.11.0"
